<resources>
    <string name="app_name" translatable="false">Grade.ly</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="average">Average</string>
    <string name="bonus">Bonus:</string>
    <string name="grade">Grade</string>
    <string name="grades">Grades</string>
    <string name="subject">Subject</string>
    <string name="test">Test</string>

    <string name="grade_sample1" translatable="false">01</string>
    <string name="grade_sample2" translatable="false">01/60</string>
    <string name="grade_sample3" translatable="false">60</string>
    <string name="slash" translatable="false">/</string>
    <string name="zero" translatable="false">0</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>

    <string name="sort_by">Sort by</string>
    <string name="az" translatable="false">A-Z</string>
    <string name="select_term">Select term</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="term">Term</string>
    <string name="rating_system">Rating system</string>
    <string name="custom_rating_system">Custom rating system</string>
    <string name="custom">Custom</string>
    <string name="confirm">Confirm</string>
    <string name="rounding_mode">Rounding mode</string>
    <string name="round_to">Round to</string>

    <string name="semesters">Semesters</string>
    <string name="trimesters">Trimesters</string>
    <string name="year">Year</string>
    <string name="semester_2">Semester 2</string>
    <string name="semester_1">Semester 1</string>
    <string name="trimester_1">Trimester 1</string>
    <string name="trimester_2">Trimester 2</string>
    <string name="trimester_3">Trimester 3</string>

    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="half_up">Half up</string>
    <string name="half_down">Half down</string>

    <string name="to_integer">To integer</string>
    <string name="to_10th">To 10-th</string>
    <string name="to_100th">To 100-th</string>

    <string name="about">About</string>
    <string name="about_text" translatable="false">NightDream Games - FauconSpartiate\nVisual identity - Ellia Walrave\nTesting - AigleSpartiate</string>

    <string name="licenses">Licenses</string>
    <string name="edit_subjects">Edit subjects</string>
    <string name="coefficient">Coefficient</string>
    <string name="edit_subjects_summary">Click to edit your subjects</string>
    <!-- Strings used for fragments for navigation -->

    <string name="coefficient_dots">Coefficient:</string>
    <string name="coefficients">Coefficients</string>
    <string name="one" translatable="false">1</string>
    <string name="add_subjects">Add subjects</string>
    <string name="add_test">Add test</string>
    <string name="add_subject">Add subject</string>
    <string name="edit_test">Edit test</string>
    <string name="edit_subject">Edit subject</string>
    <string name="app_version">App version</string>
    <string name="dark_theme">Dark mode</string>
    <string name="appearance">Appearance</string>
    <string name="light_mode_auto">Auto (recommended)</string>
    <string name="light_mode_on">On</string>
    <string name="light_mode_off">Off</string>
    <string name="confirm_delete">Are you sure you want to delete all your saved grades?</string>
    <string name="reset">Reset Grades</string>
    <string name="reset_summary">Delete all saved grades and reset app</string>
    <string name="github_summary" translatable="false">https://github.com/NightDreamGames/Grade.ly</string>
    <string name="github">GitHub repository</string>
    <string name="english" translatable="false">English</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="french" translatable="false">Français</string>
    <string name="luxemburgish" translatable="false">Lëtzebuergesch</string>
    <string name="language">Language</string>
    <string name="default_string">Default</string>
    <string name="email" translatable="false">contact.nightdreamgames@gmail.com</string>
    <string name="contact">Contact us</string>
    <string name="setup">Setup</string>
    <string name="other_system">Other school system</string>
    <string name="lux_system">Luxemburgish school system</string>
    <string name="school_system">School system</string>
    <string name="class_string">Class</string>
    <string name="chinese">Chinese</string>
    <string name="latin">Latin</string>
    <string name="basic">Basic</string>
    <string name="variant">Variant</string>
    <string name="note">Note:</string>
    <string name="note_text">You can always edit your subjects in the settings later</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>